[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/GoDOS/dialogue_manager.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Dialogue Manager" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="DialogueBox" type="Polygon2D" parent="."]
visible = false
color = Color( 0.231373, 0.164706, 0.164706, 1 )
polygon = PoolVector2Array( 10, 590, 1014, 590, 1014, 420, 10, 420 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Label" type="Label" parent="DialogueBox"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Label2" type="Label" parent="DialogueBox"]
margin_top = 20.0
margin_right = 40.0
margin_bottom = 34.0

[node name="Text" type="RichTextLabel" parent="DialogueBox"]
margin_left = 20.0
margin_top = 430.0
margin_right = 1010.0
margin_bottom = 495.0

[node name="OptionBox" type="HBoxContainer" parent="DialogueBox"]
margin_left = 20.0
margin_top = 520.0
margin_right = 1006.0
margin_bottom = 580.0
alignment = 1

[node name="AvatarBox" type="Polygon2D" parent="."]
visible = false
color = Color( 0.305882, 0.203922, 0.203922, 1 )
polygon = PoolVector2Array( 10, 410, 130, 410, 130, 290, 10, 290, 10, 410 )

[node name="Avatar" type="Sprite" parent="AvatarBox"]
position = Vector2( 70, 350 )
scale = Vector2( 1.5625, 1.5625 )
texture = ExtResource( 2 )

[node name="NameBox" type="Polygon2D" parent="."]
visible = false
position = Vector2( 60, 0 )
color = Color( 0.180392, 0.145098, 0.145098, 1 )
polygon = PoolVector2Array( 80, 380, 80, 410, 250, 410, 250, 380, 160, 380 )

[node name="Name" type="RichTextLabel" parent="NameBox"]
margin_left = 90.0
margin_top = 390.0
margin_right = 240.0
margin_bottom = 404.0
scroll_active = false
